chaing in the itle

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: red;
+    color: rgb(47, 0, 255);
 }
 body{
-    background-color: aquamarine;
+    background-color: rgb(163, 255, 127);
 }
